--- a/compose.yaml
+++ b/compose.yaml
@@ -10,24 +10,24 @@ services:
   # External Dependencies
   azurite:
     container_name: azurite
-    network_mode: host
+    # network_mode: host
     image: mcr.microsoft.com/azure-storage/azurite
     command: azurite --silent
-    # networks:
-    #   - app-network
+    networks:
+      - app-network
     ports:
       - "10000:10000"
 
   azurite-setup:
     container_name: azurite-setup
-    network_mode: host
+    # network_mode: host
     build:
       context: ./scripts
       dockerfile: ./azurite/Dockerfile
     depends_on:
       - azurite
-    # networks:
-    #   - app-network
+    networks:
+      - app-network
     environment:
       - AZURITE_CONNECTION_STRING=${AZURITE_CONNECTION_STRING}
 
@@ -54,18 +54,18 @@ services:
 
   db-setup:
     container_name: db-setup
-    network_mode: host
+    # network_mode: host
     build:
       context: ./scripts/
       dockerfile: ./database/Dockerfile
     depends_on:
       sql-edge:
         condition: service_healthy
+    networks:
+      - app-network
     environment:
       - PASSWORD=${PASSWORD}
       - DB_NAME=${DB_NAME}
-    # networks:
-    #   - app-network
 
   # Episode Data Service
   create-episode:
@@ -93,29 +93,28 @@ services:
     ports:
       - "6070:6070"
     environment:
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6070
       - ServiceInsightsDbConnectionString=Server=sql-edge,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
   # Episode Integration Service
   receive-data:
     container_name: receive-data
-    network_mode: host
+    # network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ReceiveData/Dockerfile
     depends_on:
-    - azurite
-    # networks:
-    #  - app-network
+      - azurite
+    networks:
+      - app-network
     ports:
       - "7071:7071"
     environment:
       - AzureWebJobsStorage=UseDevelopmentStorage=true
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7071
-      - AzureWebJobsStorage=UseDevelopmentStorage=true
       - ProcessDataURL=http://process-data:7072/api/ProcessData
-      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
 
   process-data:
     container_name: process-data
@@ -128,6 +127,7 @@ services:
     ports:
       - "7072:7072"
     environment:
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7072
       - EpisodeManagementUrl=http://create-update-episode:6006/api/CreateUpdateEpisode
       - ParticipantManagementUrl=http://update-participant:7074/api/UpdateParticipant
@@ -144,6 +144,7 @@ services:
     ports:
       - "6006:6006"
     environment:
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6006
       - CreateEpisodeUrl=http://create-episode:6007/api/CreateEpisode
 
@@ -158,6 +159,7 @@ services:
     ports:
       - "6060:6060"
     environment:
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6060
       - GetEpisodeUrl=http://get-episode:6070/api/GetEpisode
 
@@ -173,6 +175,7 @@ services:
     ports:
       - "7073:7073"
     environment:
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7073
 
   update-participant:
@@ -180,10 +183,11 @@ services:
     # network_mode: host
     build:
       context: ./src/
-      dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
+      dockerfile: ./ParticipantManagementService/UpdateParticipant/Dockerfile
     networks:
       - app-network
     ports:
       - "7074:7074"
     environment:
+      - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7074
