fix: added UpdateEpisode container and configured network host mode for all containers

--- a/compose.yaml
+++ b/compose.yaml
@@ -35,9 +35,10 @@ services:
 
   sql-edge:
     container_name: sql-edge
+    network_mode: host
     image: mcr.microsoft.com/azure-sql-edge
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "1433:1433"
     environment:
@@ -56,15 +57,15 @@ services:
 
   db-setup:
     container_name: db-setup
-    # network_mode: host
+    network_mode: host
     build:
       context: ./scripts/
       dockerfile: ./database/Dockerfile
     depends_on:
       sql-edge:
         condition: service_healthy
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     environment:
       - PASSWORD=${PASSWORD}
       - DB_NAME=${DB_NAME}
@@ -72,108 +73,126 @@ services:
   # Episode Data Service
   create-episode:
     container_name: create-episode
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/CreateEpisode/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "6007:6007"
     environment:
       - ASPNETCORE_URLS=http://*:6007
-      - ServiceInsightsDbConnectionString=Server=sql-edge,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+      - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
 
   get-episode:
     container_name: get-episode
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/GetEpisode/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "6070:6070"
     environment:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6070
-      - ServiceInsightsDbConnectionString=Server=sql-edge,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+      - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
+  update-episode:
+      container_name: update-episode
+      network_mode: host
+      build:
+        context: ./src/
+        dockerfile: ./EpisodeDataService/UpdateEpisode/Dockerfile
+      # networks:
+      #   - app-network
+      ports:
+        - "7777:7777"
+      environment:
+        - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
+        - ASPNETCORE_URLS=http://*:7777
+        - ServiceInsightsDbConnectionString=Server=127.0.0.1,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
+
 
   # Episode Integration Service
   receive-data:
     container_name: receive-data
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ReceiveData/Dockerfile
     depends_on:
       - azurite
-    networks:
-      - app-network
+    # networks:
+    #  - app-network
     ports:
       - "7071:7071"
     environment:
       - AzureWebJobsStorage=UseDevelopmentStorage=true
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7071
-      - ProcessDataURL=http://process-data:7072/api/ProcessData
+      - ProcessDataURL=http://127.0.0.1:7072/api/ProcessData
 
   process-data:
     container_name: process-data
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ProcessData/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "7072:7072"
     environment:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:7072
-      - EpisodeManagementUrl=http://create-update-episode:6006/api/CreateUpdateEpisode
-      - ParticipantManagementUrl=http://update-participant:7074/api/UpdateParticipant
+      - EpisodeManagementUrl=http://127.0.0.1:6006/api/CreateUpdateEpisode
+      - ParticipantManagementUrl=http://127.0.0.1:7074/api/UpdateParticipant
 
   # Episode Management Service
   create-update-episode:
     container_name: create-update-episode
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/CreateUpdateEpisode/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "6006:6006"
     environment:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6006
-      - CreateEpisodeUrl=http://create-episode:6007/api/CreateEpisode
+      - CreateEpisodeUrl=http://127.0.0.1:6007/api/CreateEpisode
+      - GetEpisodeUrl=http://127.0.0.1:6060/api/GetEpisode
+      - UpdateEpisodeUrl=http://127.0.0.1:7777/api/UpdateEpisode
 
   get-episode-mgmt:
     container_name: get-episode-mgmt
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/GetEpisode/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "6060:6060"
     environment:
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6060
-      - GetEpisodeUrl=http://get-episode:6070/api/GetEpisode
+      - GetEpisodeUrl=http://127.0.0.1:6070/api/GetEpisode
 
   # Participant Management Service
   get-participant:
     container_name: get-participant
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "7073:7073"
     environment:
@@ -182,12 +201,12 @@ services:
 
   update-participant:
     container_name: update-participant
-    # network_mode: host
+    network_mode: host
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/UpdateParticipant/Dockerfile
-    networks:
-      - app-network
+    # networks:
+    #   - app-network
     ports:
       - "7074:7074"
     environment:
