--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,24 @@
 # Environment variables for use in docker compose
 
-PASSWORD= # Enter a db password here with 8 chars, a num/ special character, and a capital letter
-AZURITE_CONNECTION_STRING="" #Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
-DB_NAME=ServiceInsightsDB
+# Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
+
+# Windows azurite connection string
+# AZURITE_CONNECTION_STRING=""
+
+# Mac azurite connecton string
+AZURITE_CONNECTION_STRING=""
+
+# Database name and SA password
+DB_NAME=ServiceInsightsDB #Database Name for the Azure SQL database
+PASSWORD="" # Enter a db password here with 8 chars, a num/ special character, and a capital letter
+
+# Mesh mailbox settings
 MESHPASSWORD="" #Password for the MESH Mailbox, for local sandbox this can be will be password, for production and integration This will be provided by the project.
 MESHSHAREDKEY="" #Shared Key for the MESH Mailbox, For local sandbox this is set in the Docker-Compose.yml file, production and integration This will be provided by the project.
 MESHKEYPASSPHRASE="" #Passpharse for the private key for authenticating against the MESH Mailbox, for the local sandbox this is defined when creating the private key and certificate, production and integration this will be issues when provisining the environment.
+MESHAPIBASEURL=http://localhost:8700/messageexchange #Mesh mailbox URL
+BSSMAILBOX=X26ABC1 #Mesh mailbox name
+
+# Azurite blob container name
+BSSCONTAINERNAME="sample-container" #Azure blob container name
+
