chore: updated json template

--- a/src/BIAnalyticsService/CreateDataAssets/local.settings.json.template
+++ b/src/BIAnalyticsService/CreateDataAssets/local.settings.json.template
@@ -3,6 +3,10 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
+    "GetEpisodeUrl": "http://localhost:6060/api/GetEpisode",
+    "GetParticipantUrl": "http://localhost:6061/api/GetParticipant",
+    "CreateParticipantScreeningEpisodeUrl":"http://localhost:6010/api/CreateParticipantScreeningEpisode",
+    "CreateParticipantScreeningProfileUrl":"http://localhost:6011/api/CreateParticipantScreeningProfile"
   },
   "Host": {
     "LocalHttpPort": 6009
