--- a/src/BIAnalyticsService/CreateDataAssets/local.settings.json.template
+++ b/src/BIAnalyticsService/CreateDataAssets/local.settings.json.template
@@ -2,7 +2,7 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
     "GetEpisodeUrl": "http://localhost:6060/api/GetEpisode",
     "GetParticipantUrl": "http://localhost:6061/api/GetParticipant",
     "CreateParticipantScreeningEpisodeUrl":"http://localhost:6010/api/CreateParticipantScreeningEpisode",
