--- a/compose.yaml
+++ b/compose.yaml
@@ -244,6 +244,8 @@ services:
       context: ./src/
       dockerfile: ./MeshIntegrationService/RetrieveMeshFile/Dockerfile
     platform: linux/arm64
+    depends_on:
+      - azurite
     networks:
       - app-network
     ports:
