--- a/.env.template
+++ b/.env.template
@@ -23,3 +23,7 @@ BSSMAILBOX=X26ABC1 #Mesh mailbox name
 # Azurite blob container name
 BSSCONTAINERNAME="sample-container" #Azure blob container name
 
+# Environment settings for windows or mac local
+APP-NETWORK=bridge #bridge for mac, host for windows
+PLATFORM=linux/arm64 #linux/arm64 for mac with silicon, linux/amd64 for windows
+
