chore: remove unused

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,6 @@
 # Environment variables for use in docker compose
 
 # Enter the connection string for azurite in the quotes, the connection string can be found at https://github.com/Azure/Azurite?tab=readme-ov-file#connection-strings
-
-# Windows azurite connection string
-# AZURITE_CONNECTION_STRING=""
-
-# Mac azurite connecton string
 AZURITE_CONNECTION_STRING=""
 
 # Database name and SA password
@@ -24,6 +19,6 @@ BSSMAILBOX=X26ABC1 #Mesh mailbox name
 BSSCONTAINERNAME="sample-container" #Azure blob container name
 
 # Environment settings for windows or mac local
-APP-NETWORK=bridge #bridge for mac, host for windows
-PLATFORM=linux/arm64 #linux/arm64 for mac with silicon, linux/amd64 for windows
+APP-NETWORK="bridge" #bridge for mac, host for windows
+PLATFORM="" #linux/arm64 for mac with silicon, linux/amd64 for windows
 
