docs: update env template comment

--- a/.env.template
+++ b/.env.template
@@ -20,5 +20,5 @@ BSSCONTAINERNAME="sample-container" #Azure blob container name
 
 # Environment settings for windows or mac local
 APP-NETWORK="bridge" #bridge for mac, host for windows
-PLATFORM="" #linux/arm64 for mac with silicon, linux/amd64 for windows
+PLATFORM="" # leave empty for automatic or set linux/arm64 for mac with silicon, or linux/amd64 for windows
 
