feat: set APP_NETWORK env variable

--- a/compose-universal.yaml
+++ b/compose-universal.yaml
@@ -3,7 +3,7 @@ name: service-insights
 # Define network
 networks:
   app-network:
-    driver: ${APP-NETWORK}
+    driver: ${APP_NETWORK}
 
 # Define services
 services:
