--- a/.env.template
+++ b/.env.template
@@ -19,6 +19,6 @@ BSSMAILBOX=X26ABC1 #Mesh mailbox name
 BSSCONTAINERNAME="sample-container" #Azure blob container name
 
 # Environment settings for windows or mac local
-APP-NETWORK="bridge" #bridge for mac, host for windows
+APP_NETWORK="bridge" #bridge for mac, host for windows
 PLATFORM="" # leave empty for automatic or set linux/arm64 for mac with silicon, or linux/amd64 for windows
 
