--- a/compose-mac.yaml
+++ b/compose-mac.yaml
@@ -30,9 +30,11 @@ services:
       - app-network
     environment:
       - AZURITE_CONNECTION_STRING=${AZURITE_CONNECTION_STRING}
-  sql-edge:
-    container_name: sql-edge
-    image: mcr.microsoft.com/azure-sql-edge
+
+  sql-database:
+    container_name: sql-database
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -51,13 +53,13 @@ services:
       retries: 5
       start_period: 30s
 
-  db-setup:
-    container_name: db-setup
+  database-setup:
+    container_name: database-setup
     build:
       context: ./scripts/
       dockerfile: ./database/Dockerfile
     depends_on:
-      sql-edge:
+      sql-database:
         condition: service_healthy
     networks:
       - app-network
