--- a/compose-universal.yaml
+++ b/compose-universal.yaml
@@ -36,10 +36,10 @@ services:
     environment:
       - AZURITE_CONNECTION_STRING=${AZURITE_CONNECTION_STRING}
 
-  sql-edge:
-    container_name: sql-edge
+  sql-database:
+    container_name: sql-database
     restart: on-failure
-    # image: mcr.microsoft.com/azure-sql-edge
+    # image: mcr.microsoft.com/azure-sql-database
     image: mcr.microsoft.com/mssql/server:2022-latest
     platform: ${PLATFORM}
     networks:
@@ -60,15 +60,15 @@ services:
       retries: 5
       start_period: 30s
 
-  db-setup:
-    container_name: db-setup
+  database-setup:
+    container_name: database-setup
     restart: on-failure
     build:
       context: ./scripts/
       dockerfile: ./database/Dockerfile
     platform: ${PLATFORM}
     depends_on:
-      sql-edge:
+      sql-database:
         condition: service_healthy
     networks:
       - app-network
