--- a/compose.yaml
+++ b/compose.yaml
@@ -33,10 +33,10 @@ services:
     environment:
       - AZURITE_CONNECTION_STRING=${AZURITE_CONNECTION_STRING}
 
-  sql-edge:
-    container_name: sql-edge
+  sql-database:
+    container_name: sql-database
     network_mode: host
-    image: mcr.microsoft.com/azure-sql-edge
+    image: mcr.microsoft.com/mssql/server:2022-latest
     # networks:
     #   - app-network
     ports:
@@ -55,14 +55,14 @@ services:
       retries: 5
       start_period: 30s
 
-  db-setup:
-    container_name: db-setup
+  database-setup:
+    container_name: database-setup
     network_mode: host
     build:
       context: ./scripts/
       dockerfile: ./database/Dockerfile
     depends_on:
-      sql-edge:
+      sql-database:
         condition: service_healthy
     # networks:
     #   - app-network
