docs: update readme

--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@
 AZURITE_CONNECTION_STRING=""
 
 # Database name and SA password
-DB_CONNECTION="" # sql-edge for mac, 127.0.0.1 for windows
+DB_CONNECTION="" # sql-database for mac, 127.0.0.1 for windows
 DB_NAME=ServiceInsightsDB #Database Name for the Azure SQL database
 PASSWORD="" # Enter a db password here with 8 chars, a num/ special character, and a capital letter
 
