--- a/.env.template
+++ b/.env.template
@@ -12,7 +12,7 @@ PASSWORD="" # Enter a db password here with 8 chars, a num/ special character, a
 MESHPASSWORD="" #Password for the MESH Mailbox, for local sandbox this can be will be password, for production and integration This will be provided by the project.
 MESHSHAREDKEY="" #Shared Key for the MESH Mailbox, For local sandbox this is set in the Docker-Compose.yml file, production and integration This will be provided by the project.
 MESHKEYPASSPHRASE="" #Passpharse for the private key for authenticating against the MESH Mailbox, for the local sandbox this is defined when creating the private key and certificate, production and integration this will be issues when provisining the environment.
-MESHAPIBASEURL=http://localhost:8700/messageexchange #Mesh mailbox URL
+MESHAPIBASEURL=http://localhost:8700/messageexchange #Mesh mailbox URL host.docker.internal for mac and localhost for windows
 BSSMAILBOX=X26ABC1 #Mesh mailbox name
 
 # Azurite blob container name
@@ -20,5 +20,5 @@ BSSCONTAINERNAME="sample-container" #Azure blob container name
 
 # Environment settings for windows or mac local
 APP_NETWORK="bridge" #bridge for mac, host for windows
-PLATFORM="" # leave empty for automatic or set linux/arm64 for mac with silicon, or linux/amd64 for windows
+
 
