--- a/compose-mac.yaml
+++ b/compose-mac.yaml
@@ -3,16 +3,15 @@ name: service-insights
 # Define network
 networks:
   app-network:
-    driver: bridge
+    driver: ${APP_NETWORK}
 
 # Define services
 services:
   # External Dependencies
   azurite:
     container_name: azurite
+    restart: on-failure
     image: mcr.microsoft.com/azure-storage/azurite
-    platform: linux/arm64
-    # command: azurite --silent
     command: azurite --blobHost 0.0.0.0 --blobPort 10000 --queueHost 0.0.0.0 --queuePort 10001 --tableHost 0.0.0.0 --tablePort 10002 --silent
     networks:
       - app-network
@@ -23,10 +22,10 @@ services:
 
   azurite-setup:
     container_name: azurite-setup
+    restart: on-failure
     build:
       context: ./scripts
       dockerfile: ./azurite/Dockerfile
-    platform: linux/arm64
     depends_on:
       - azurite
     networks:
@@ -36,8 +35,9 @@ services:
 
   sql-database:
     container_name: sql-database
+    restart: on-failure
+    # image: mcr.microsoft.com/azure-sql-database
     image: mcr.microsoft.com/mssql/server:2022-latest
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -49,7 +49,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "curl -v --silent 127.0.0.1:1433 --stderr - | grep -q 'Empty reply from server'",
+          "grep -q 'SQL Server is now ready for client connections' /var/opt/mssql/log/errorlog || exit 1",
         ]
       interval: 15s
       timeout: 15s
@@ -58,10 +58,10 @@ services:
 
   database-setup:
     container_name: database-setup
+    restart: on-failure
     build:
       context: ./scripts/
       dockerfile: ./database/Dockerfile
-    platform: linux/arm64
     depends_on:
       sql-database:
         condition: service_healthy
@@ -75,10 +75,10 @@ services:
   # BI Analytics Data Service
   create-participant-screening-episode:
     container_name: create-participant-screening-episode
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsDataService/CreateParticipantScreeningEpisode/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -91,10 +91,10 @@ services:
 
   create-participant-screening-profile:
     container_name: create-participant-screening-profile
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsDataService/CreateParticipantScreeningProfile/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -108,10 +108,10 @@ services:
   # BI Analytics Service
   create-data-assets:
     container_name: create-data-assets
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./BIAnalyticsService/CreateDataAssets/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -128,10 +128,10 @@ services:
   # Episode Data Service
   create-episode:
     container_name: create-episode
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/CreateEpisode/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -143,10 +143,10 @@ services:
 
   get-episode:
     container_name: get-episode
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/GetEpisode/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -159,10 +159,10 @@ services:
 
   update-episode:
     container_name: update-episode
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./EpisodeDataService/UpdateEpisode/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -176,10 +176,10 @@ services:
   # Episode Integration Service
   receive-data:
     container_name: receive-data
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ReceiveData/Dockerfile
-    platform: linux/arm64
     depends_on:
       - azurite
     networks:
@@ -195,10 +195,10 @@ services:
 
   process-data:
     container_name: process-data
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./EpisodeIntegrationService/ProcessData/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -213,10 +213,10 @@ services:
   # Episode Management Service
   create-update-episode:
     container_name: create-update-episode
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/CreateUpdateEpisode/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -231,10 +231,10 @@ services:
 
   get-episode-mgmt:
     container_name: get-episode-mgmt
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./EpisodeManagementService/GetEpisode/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -248,10 +248,10 @@ services:
   # Mesh Mailbox Management Service
   retrieve-mesh-file:
     container_name: retrieve-mesh-file
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./MeshIntegrationService/RetrieveMeshFile/Dockerfile
-    platform: linux/arm64
     depends_on:
       - azurite
     networks:
@@ -260,6 +260,7 @@ services:
       - "6777:6777"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - AzureWebJobsStorage=${AZURITE_CONNECTION_STRING}
       - FUNCTIONS_WORKER_RUNTIME=dotnet-isolated
       - ASPNETCORE_URLS=http://*:6777
       - MeshApiBaseUrl=${MESHAPIBASEURL}
@@ -272,10 +273,10 @@ services:
   # Participant Management Service
   get-participant:
     container_name: get-participant
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/GetParticipant/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
@@ -287,10 +288,10 @@ services:
 
   update-participant:
     container_name: update-participant
+    restart: on-failure
     build:
       context: ./src/
       dockerfile: ./ParticipantManagementService/UpdateParticipant/Dockerfile
-    platform: linux/arm64
     networks:
       - app-network
     ports:
