feat: created get demographics data function and unit tests for it

--- a/src/BIAnalyticsService/CreateDataAssets/local.settings.json.template
+++ b/src/BIAnalyticsService/CreateDataAssets/local.settings.json.template
@@ -6,7 +6,8 @@
     "GetEpisodeUrl": "http://localhost:6060/api/GetEpisode",
     "GetParticipantUrl": "http://localhost:6061/api/GetParticipant",
     "CreateParticipantScreeningEpisodeUrl":"http://localhost:6010/api/CreateParticipantScreeningEpisode",
-    "CreateParticipantScreeningProfileUrl":"http://localhost:6011/api/CreateParticipantScreeningProfile"
+    "CreateParticipantScreeningProfileUrl":"http://localhost:6011/api/CreateParticipantScreeningProfile",
+    "DemographicsServiceUrl": "http://localhost:6080/api/GetDemographicsData"
   },
   "Host": {
     "LocalHttpPort": 6009
