fix: Updated TestData folder configuration and removed duplicate
* Removed the duplicate TestData folder from IntegrationTests directory
* Updated IntegrationTests.csproj to include the root-level TestData folder
* Verified that the tests correctly use the json test data files from the root-level TestData folder now
* Updated the README.md removing the IntegrationTests/TestData directory

--- a/tests/IntegrationTests/IntegrationTests.csproj
+++ b/tests/IntegrationTests/IntegrationTests.csproj
@@ -46,6 +46,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\..\TestData\**\*">
+      <link>TestData\%(RecursiveDir)%(Filename)%(Extension)</link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Shared\Model\Model.csproj" />
     <ProjectReference Include="..\..\src\Shared\Data\Data.csproj" />
   </ItemGroup>
